--- a/public/_assets/scss/base/_typography.scss
+++ b/public/_assets/scss/base/_typography.scss
@@ -38,7 +38,7 @@
 
 .small-print {
     @include text-style(sans);
-    @include text-size(small);
+    @include text-size(base);
 
     @include emphasis-serif();
 }
@@ -84,6 +84,8 @@
     &_row {
         display: flex;
 
+        flex-wrap: wrap;
+
         list-style: none;
     }
 
@@ -94,6 +96,8 @@
             display: inline-block;
 
             margin-left: 0rem;
+
+            white-space: nowrap;
 
             &:not(:last-child)::after {
                 margin: 0 var(--spacing-050);
